# drive.py

./: .gitignore  Makefile  hatch.toml  pyproject.toml
src/app/: jav.py  lib.py  lseh.py  normalize_unicode.py
src/app/cg/: _analyze.py  _apply.py  _args.py  _generate.py  _main.py  _types.py
src/app/dedup/: __init__.py  _analyze.py  _apply.py  _args.py  _main.py  _matching.py  _types.py
src/app/eh/: _analyze.py  _args.py  _crawl.py  _main.py  _types.py
src/app/faststart/: _args.py  _backend.py  _cache.py  _main.py  _operations.py  _processor.py  _scripter.py  _types.py
src/app/hah/: _download.py  _main.py  _upload.py
src/app/lfs/: _analyzer.py  _cleanup.py  _generator.py  _main.py  _scanner.py  _scripter.py
src/app/longname/: _analyze.py  _apply.py  _args.py  _rules.py  _types.py  _verify.py
src/app/media/: __main__.py
src/app/pack/: _cleanup.py  _compress.py  _main.py  _scan.py
src/legacy/benchmark/: _lib.py
src/legacy/migration/app/: common.py  migrate.py  progress.py  speed.py
src/legacy/shell/: finddup.py  fixcache.py
tests/: test_dedup.py  test_eh.py  test_faststart.py  test_jav.py  test_lfs.py
