[project]
name = "drive-py"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Wei-Cheng Pan", email = "legnaleurc@gmail.com" }
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-magic>=0.4.27,<0.5.0",
    "wcpan-drive-cli>=3.7.3,<4.0.0",
    "wcpan-drive-crypt>=4.1.1,<5.0.0",
    "wcpan-drive-google>=9.1.7,<10.0.0",
    "wcpan-drive-sqlite>=2.1.0,<3.0.0",
    "wcpan-jav>=0.2.4,<0.3.0",
    "wcpan-logging>=2.1.0,<3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
